--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Mateusz Bosek <matt@uniqly.io>",
   "license": "MIT",
   "dependencies": {
-    "web3": "^1.3.4"
+    "web3": "^1.3.4",
+    "yarn.lock": "^0.0.1-security"
   },
   "devDependencies": {
     "@openzeppelin/test-environment": "^0.1.9",
